使用 Colaboratory 创建

--- a/In_Depth_Exploration_of_Sentiment_Analysis_Based_on_BERT.ipynb
+++ b/In_Depth_Exploration_of_Sentiment_Analysis_Based_on_BERT.ipynb
@@ -84,6 +84,28 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "data_path = '/content/gdrive/MyDrive/MLA2/sentiment140.csv'"
+      ],
+      "metadata": {
+        "id": "AfprC_kJA3K-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_path = '/content/gdrive/MyDrive/MLA2/sentiment140.csv' #If can not access google drive, use loacl path instead"
+      ],
+      "metadata": {
+        "id": "sdJot7daA4tq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": 33,
       "metadata": {
         "id": "ghy27Mfw1lqv"
@@ -442,6 +464,18 @@
     {
       "cell_type": "code",
       "source": [
+        "model = BertForSequenceClassification.from_pretrained('gdrive/MyDrive/sentiment_model')\n",
+        "tokenizer = BertTokenizer.from_pretrained('gdrive/MyDrive/sentiment_model') #If can not access google drive, use loacl path instead"
+      ],
+      "metadata": {
+        "id": "qYhlae93BKWI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def sentiment_analysis(sentence):\n",
         "    # 对句子进行token化\n",
         "    inputs = tokenizer(sentence, return_tensors=\"pt\", truncation=True, padding=True, max_length=128)\n",
@@ -596,7 +630,7 @@
       "provenance": [],
       "history_visible": true,
       "mount_file_id": "1NBctTZNGF6xd_1rchlnTDIv_JJpNdlWn",
-      "authorship_tag": "ABX9TyMY87+7SlOiKQZLmQMM2/xM",
+      "authorship_tag": "ABX9TyNP91ZfmmloJz4wBT6vdYCc",
       "include_colab_link": true
     },
     "kernelspec": {
